--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
+<body>
 
+  <img src = "http://static1.squarespace.com/static/53ece2aee4b0a9c387c3eaea/53ed5292e4b052f83848fc77/590b67c5c534a5cc5afbaf24/1493920665352/playboi+carti.jpg?format=1500w"
