--- a/index.html
+++ b/index.html
@@ -1,3 +1,103 @@
+<html>
 <body>
+<h1 style="font-size:55px; text-align:center; font-family:">Travis Scott Albums</h1>
+  <img src="https://i1.sndcdn.com/artworks-000048622882-92hn84-t500x500.jpg" style="width:380px;height:350px;">
+  <img src="https://i1.sndcdn.com/artworks-000088468287-jju25j-t500x500.jpg" style="width:380px;height:350px;">
+  <img src="https://images-na.ssl-images-amazon.com/images/I/71RDpVmr2hL._SY355_.jpg" style="width:380px;height:350px;">
+<img src="http://images.genius.com/5f66b21e0c69ff6c30080f2c6795f025.924x924x1.jpg" style="width:380x;height:350px;">
+  <img src="https://upload.wikimedia.org/wikipedia/en/0/0b/Astroworld_by_Travis_Scott.jpg" style="width:380px;height:350px;">
+ 
+  
+    <div class="row">
+  <div class="column" style="background-color:#bbb;">
+    <h2>Owl Pharoah</h2>
+     <ol>
+  <li>Upper Echelon</li>
+  <li>Quintana ft. Wale</li>
+  <li>Blocka La Flame</li>
+</ol>  
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Days Before Rodeo</h2>
+    <p><ol>
+  <li>Quintana Pt.2</li>
+  <li>Drugs You Should Try It</li>
+  <li>Skyfall ft. Young Thug</li>
+</ol>  </p>
+  </div>
+      <div class="column" style="background-color:#bbb;">
+    <h2>Rodeo</h2>
+    <p><ol>
+  <li>Antidote</li>
+  <li>90210 ft. Kacy Hill</li>
+  <li>Oh My Dis Side ft. Quavo</li>
+</ol>  </p>
+  </div>
+      <div class="column" style="background-color:#bbb;">
+    <h2>Birds In The Trap Sing McKnight</h2>
+    <p><ol>
+  <li>Way Back</li>
+  <li>Goosebumps ft. Kendrick Lamar</li>
+  <li>Through The Late Night ft. Kid Cudi</li>
+</ol>  </p>
+  </div>
+      <div class="column" style="background-color:#bbb;">
+        <h2>Astroworld</h2>
+    <p><ol>
+  <li>SKELETONS ft. The Weeknd</li>
+  <li>R.I.P. SCREW ft. Swae Lee</li>
+  <li>HOUSTONFORNICATION</li>
+</ol>  </p>
+</div>
+  
+</div>
+<p>  
+  Travis Scott is my generation's version of a rockstar. He is only 28 years old and has 3 number one albums, 16 platinum songs, and a girlfriend who is the world's youngest billionare. He is the personal idol of millions of people just like me, and is arguably is the most influential artist of our generation. The rapper, born and raised in Houston, didn't hit huge media spotlight until his release of Rodeo in 2015, despite being an up and coming artist since 2008. Jacques Webster II got his stage name, Travis Scott, through both his Uncle, as well as his idol, Kid Cudi. Scott moved to Los Angeles in 2011, and was introduced to fellow rapper T.I. His career only skyrocketed from here, eventually dropping 5 albums. Today, I am here to rank these 5 albums in order, and explain why I believe he is the greatest artist of our generation.
+</p>
+<p>  
+  His first solo full length project titled "Owl Pharoah" was released as a free download in 2013. At this point in his career, he still wasn't in the spotlight, and many of his current "fans" don't even know about this mixtape. With productions from himself, as well as fellow rappers Kanye West and Mike Dean, this mixtape was revolutionary looking back. The most notable songs from this mixtape are Upper Echelon, Quintana ft. Wale, and Blocka La Flame, in that order. In my opinion, this was the worst of the 5. That's saying a lot about Scott, due to how it's still one of the most revolutionary and impactful mixtapes of all time.
+</p>
+<p>  
+  Click <a href=https://genius.com/Travis-scott-upper-echelon-lyrics>Upper Echelon</a> to listen
+</p>
+<p>  
+  His second released album, Days Before Rodeo, was released on August 18th of 2014. This album greatly differed from that of Owl Pharoah, and the differences are very obvious. In Owl Pharoah, a majority of the songs were very rage and mosh pit oriented, while songs in Days Before Rodeo was a lot more melodic and vocal oriented. In my opinion, it is Scott's best work yet. Every single song is an absolute banger, and the production value of each and every song is way ahead of its time. The final minute and a half of Quintana Pt. 2 is the greatest melodic sequence I've ever heard, and has yet to be unmatched.
+</p>
+<p>  
+  Click <a href=https://genius.com/Travis-scott-quintana-pt-2-lyrics>Quintana Pt. 2</a> to listen
+</p>
+<p>  
+  Scott's third album, titled Rodeo, was considered his first real album, as Owl Pharoah and Days Before Rodeo were considered mixtapes. Over his first three releases, Rodeo was by far the most revolutionary, and many consider it the greatest trap album of all time. Critics were claming before Rodeo that Scott lacked that one song that he could perform and everybody would sing along to, but this album changed that perspective forever. The song Antidote was his first song that reached worldwide attention, being number one on the Billboard top 100. He also performed on Jimmy Kimmel after releasing the album, helping it reach even more attention. The album, containing 17 songs, is over an hour and 15 minutes long, showing just how high the production value is of every song. Again, Scott was years ahead of his time, eventually revolutionizing the whole rap game.
+</p>
+<p>  
+  Click <a href=https://genius.com/Travis-scott-90210-lyrics>90210</a> to listen
+</p>
+<p>  
+  His second full length album titled Birds in the Trap Sing McNight was released in 2017. At this point in his career, Scott had a lot of anticipation for the album, and yet again failed to dissapoint. Prior to the album, Scott released the single 'pick up the phone' with features from Quavo and Young Thug, as well as 'goosebumps' featuring Kendrick Lamar. Both of these songs became platinum hits, and caused that much more anticipation for the rest of the album. Every single song on this album is amazing, although it isn't his best work. The production is still amazing in comparison to all other rappers, yet it doesn't even come close to the level that Rodeo was on. His advancement from Owl Pharoah to this prove his increase in maturity of his music, and how he still has a ton of room for advancement.
+</p>
+<p>  
+  Click <a href=https://genius.com/Travis-scott-way-back-lyrics>Way Back</a> to listen
+</p>
+<p>  
+  His latest release, and by far his most anticipated album, titled Astroworld, was released mid 2018. This album changed everybody's perspective of Scott, as it completely skyrocketed his name into the worldwide media. The album literally does not have one bad song, and every song sounds different than the next. Each and every time I listen to this album, it feels like a trip through outer space. All of the features are perfectly placed in each song, and it by far has the most production value out of any of his prior work. The song Sicko Mode is by far Scott's most played song of all time, and also became number 1 on the Billboard Hot 100. The Astroworld Tour, coming with the album, is in my opinion the greatest album tour of all time. It spanned from November 8, 2018, to March 26, 2019, each location being sold out. The merchandise is by far the greatest merch of all time, and is in such high demand to the point that resellers can recieve triple what they paid for it. 
+</p>
+<p>  
+  Click <a href=https://genius.com/Travis-scott-skeletons-lyrics>Skeletons</a> to listen
+</p>
+<h1 style="font-size:55px; text-align:center; font-family:">My Ranking</h1>
+<ol>
+<li>Rodeo</li>
+ <li>Days Before Rodeo</li>
+  <li>Astroworld</li>
+<li>Birds In The Trap Sing McKnight</li>
+<li>Owl Pharoah</li>
+</ol>
+<p>  
 
-  <img src = "http://static1.squarespace.com/static/53ece2aee4b0a9c387c3eaea/53ed5292e4b052f83848fc77/590b67c5c534a5cc5afbaf24/1493920665352/playboi+carti.jpg?format=1500w"
+<p>Do You Agree With My Ranking?</p>
+
+<form action="/action_page.php">
+  <input type="radio" name="school" value="yes" checked> yes<br>
+  <input type="radio" name="school" value="no"> no <br>
+  <input type="submit">
+</form> 
