--- a/index.html
+++ b/index.html
@@ -1,6 +1,55 @@
 <html>
 <body>
+  <!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 1px solid #e7e7e7;
+  background-color: #f3f3f3;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+li a.active {
+  color: white;
+  background-color: #4CAF50;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">Days Before Rodeo</a></li>
+  <li><a href="#contact">Rodeo</a></li>
+  <li><a href="#about">Birds in the Trap Sing McNight</a></li>
+  <li><a href="#about">Astroworld</a></li>
+</ul>
+
+</body>
+</html>
+
 <h1 style="font-size:55px; text-align:center; font-family:">Travis Scott Albums</h1>
+ 
   <img src="https://i1.sndcdn.com/artworks-000048622882-92hn84-t500x500.jpg" style="width:380px;height:350px;">
   <img src="https://i1.sndcdn.com/artworks-000088468287-jju25j-t500x500.jpg" style="width:380px;height:350px;">
   <img src="https://images-na.ssl-images-amazon.com/images/I/71RDpVmr2hL._SY355_.jpg" style="width:380px;height:350px;">
@@ -49,7 +98,7 @@
   <li>HOUSTONFORNICATION</li>
 </ol>  </p>
 </div>
-  
+
 </div>
 <p>  
   Travis Scott is my generation's version of a rockstar. He is only 28 years old and has 3 number one albums, 16 platinum songs, and a girlfriend who is the world's youngest billionare. He is the personal idol of millions of people just like me, and is arguably is the most influential artist of our generation. The rapper, born and raised in Houston, didn't hit huge media spotlight until his release of Rodeo in 2015, despite being an up and coming artist since 2008. Jacques Webster II got his stage name, Travis Scott, through both his Uncle, as well as his idol, Kid Cudi. Scott moved to Los Angeles in 2011, and was introduced to fellow rapper T.I. His career only skyrocketed from here, eventually dropping 5 albums. Today, I am here to rank these 5 albums in order, and explain why I believe he is the greatest artist of our generation.
