--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ li a.active {
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Days Before Rodeo</a></li>
+  <li><a class="active" href="index.html">Travis Scott</a></li>
+  <li><a href="projects.html">Projects</a></li>
   <li><a href="#contact">Rodeo</a></li>
   <li><a href="#about">Birds in the Trap Sing McNight</a></li>
   <li><a href="#about">Astroworld</a></li>
@@ -150,3 +150,4 @@ li a.active {
   <input type="radio" name="school" value="no"> no <br>
   <input type="submit">
 </form> 
+
