--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ li a:hover {
 
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href=projects.html>Get Buckets</a></li>
+  <li><a href="#Pictures">Pictures</a></li>
+  <li><a href="#D-Money Dance Moves">D-Money Dance Moves</a></li>
 </ul>
 </body>
 </html>
