--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ li a:hover {
 
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href=projects.html>Get Buckets</a></li>
+  <li><a href="projects.html:">Get Buckets</a></li>
   <li><a href="#Pictures">Pictures</a></li>
   <li><a href="#D-Money Dance Moves">D-Money Dance Moves</a></li>
 </ul>
