--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<p> Project Page </p>
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="projects.html:">Get Buckets</a></li>
+  <li><a href="#Pictures">Pictures</a></li>
+  <li><a href="#D-Money Dance Moves">D-Money Dance Moves</a></li>
+</ul>
 <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
 
