--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<body>
 
 <ul>
   <li><a href="#home">Home</a></li>
@@ -8,6 +9,8 @@
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 </ul>
 <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</html>
+
+  </body>
+  </html>
 
 
