--- a/snowflake.html
+++ b/snowflake.html
@@ -1,1 +1,17 @@
+<style>
+<head>
+<body>
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="">Get Buckets</a></li>
+  <li><a href="#Pictures">Pictures</a></li>
+  <li><a href="projects.html">D-Money Dance Moves</a></li>
+</ul>
+
+
+
 <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/cS4pRPpi13uL-wKpgbpgiwnDcmD1R-2QuZAeIaTmu5U/embed"></iframe>
+</body>
+</style>
+</head>
