--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<head>
+  
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="">Get Buckets</a></li>
@@ -11,6 +12,6 @@
 <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
   </body>
-  </html>
+  </head>
 
 
