--- a/projects.html
+++ b/projects.html
@@ -1,17 +1,38 @@
-<!DOCTYPE html>
-
-<body>
 <head>
-  
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color:  #555;
+  color: silver;
+}
+</style>
+</head>
+<body>
+
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="">Get Buckets</a></li>
   <li><a href="#Pictures">Pictures</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
-</ul>
-<iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
-  </body>
-  </head>
-
+  <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  
+  </ul>
+</body>
+</html>
 
