--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="">Get Buckets</a></li>
   <li><a href="#Pictures">Pictures</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
