--- a/snowflake.html
+++ b/snowflake.html
@@ -3,7 +3,7 @@
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
   <li><a href="snowflake.html">Digital Scene</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
