--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="index.html">Home</a></li>
+  <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
-  <li><a href="#Pictures">Pictures</a></li>
+  <li><a href="snowflake.html">Digital Scene</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 </ul>
 </body>
