--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@ li a:hover {
 <body>
 
 <ul>
-  <li><a href="index.html">Home</a></li>
+  <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
-  <li><a href="#Pictures">Pictures</a></li>
+  <li><a href="snowflake.html">Digital Scene</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 
   <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
