--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ li a:hover {
 <ul>
   <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
-  <li><a href="snowflake.html">Digital Scene</a></li>
+  <li><a href="snowflake.html">Banana Game</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 </ul>
 </body>
