--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@ li a:hover {
 <ul>
   <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
-  <li><a href="snowflake.html">Digital Scene</a></li>
+  <li><a href="snowflake.html">Banana Game</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 
   <iframe src="https://scratch.mit.edu/projects/325640555/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
