--- a/snowflake.html
+++ b/snowflake.html
@@ -5,7 +5,7 @@
 <ul>
   <li><a href="index.html">Travis Scott</a></li>
   <li><a href="">Get Buckets</a></li>
-  <li><a href="snowflake.html">Digital Scene</a></li>
+  <li><a href="snowflake.html">Banana Game</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 </ul>
 
