--- a/snowflake.html
+++ b/snowflake.html
@@ -1,5 +1,27 @@
-<style>
 <head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color:  #555;
+  color: silver;
+}
+</style>
+</head>
 <body>
 
 <ul>
@@ -7,12 +29,8 @@
   <li><a href="">Get Buckets</a></li>
   <li><a href="snowflake.html">Banana Game</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
-  
-  <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/xHKr20NyUxL3lmESRVPcOcJcqGb6Rf_rDvjDBGO6jHU/embed"></iframe>
 
-</ul>
-
-
+<iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/xHKr20NyUxL3lmESRVPcOcJcqGb6Rf_rDvjDBGO6jHU/embed"></iframe>  
+  </ul>
 </body>
-</style>
-</head>
+</html>
