--- a/buckets.html
+++ b/buckets.html
@@ -1,1 +1,36 @@
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
 
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color:  #555;
+  color: silver;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a href="index.html">Travis Scott</a></li>
+  <li><a href="">Get Buckets</a></li>
+  <li><a href="snowflake.html">Banana Game</a></li>
+  <li><a href="projects.html">D-Money Dance Moves</a></li>
+
+<iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/m103V7DmfGlcG8dfU-bT2HuUPxnix-ys293uDoCuyfY/embed"></iframe>  
+  </ul>
+</body>
+</html>
