--- a/snowflake.html
+++ b/snowflake.html
@@ -26,7 +26,7 @@ li a:hover {
 
 <ul>
   <li><a href="index.html">Travis Scott</a></li>
-  <li><a href="">Get Buckets</a></li>
+  <li><a href="buckets.html">Get Buckets</a></li>
   <li><a href="snowflake.html">Banana Game</a></li>
   <li><a href="projects.html">D-Money Dance Moves</a></li>
 
